# CUVA

./: .gitignore  .gitmodules  Category.txt  README.md  pyproject.toml  requirements.txt  video_process.py
Curve/: Clip_curve.py  Clip_curve_zjy.py  Video_Caption_for_Curve.py  blip2.py  cosine_test.py  generate_caption_msvd.py  main.py  test.py  utils.py  video_Caption.py
Curve/chatcaptioner/: blip2.py  video_chat.py  video_reader.py
Curve/msvd_data/: caption.txt
Data/: chat_history.txt  test.py
Models/Video-ChatGPT/: test.sh
Video-ChatGPT/: gradio_web_server.log.2023-10-28  requirements.txt
Video-ChatGPT/video_chatgpt/: video_conversation.py
beats/: audio_feature_extractor.py  requirements.txt  test.ipynb  test.py
beats/.ipynb_checkpoints/: test-checkpoint.ipynb
mist/: args.py  main_agqa_demo.py  main_agqa_v2.py  main_anomaly.py  requirements.txt
mist/extract/: dataloader_video.py  extract_clip_feature.py  extract_clip_features.py
mist/model/: EncoderVid.py  __init__.py  mist.py
mist/shells/: agqa_v2_mist.sh  anomaly.py
mist/train/: train_anomaly.py  train_mist.py
train_mist_v1/: Causev1.json  Causev1_ori.json  Causev1_val.json  Descriptionv1.json  Descriptionv1_ori.json  Resultv1.json  Resultv1_ori.json  frame_size.json  gt_Causev1.json  gt_Descriptionv1.json  gt_Resultv1.json
train_mist_v1/output/: output_anomaly_cause.json  output_anomaly_cause_mod.json  output_anomaly_description.json  output_anomaly_description_mod.json  output_anomaly_rank.json  output_anomaly_result.json  output_anomaly_result_mod.json  output_description.json  (+1 more)
(+34 files in other folders)
