[tool.poetry]
name = "cuva"
version = "0.1.0"
description = ""
authors = ["fesvhtr <fesvhtr@gmail.com>"]
license = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
